--- a/package.json
+++ b/package.json
@@ -1,12 +1,31 @@
 {
-    "name": "git-activity",
-    "description": "Make your github activities look professional",
-    "version": "1.0.0",
-    "main": "index.js",
-    "license": "MIT",
-    "dependencies": {
-        "jsonfile": "^6.0.1",
-        "moment": "^2.27.0",
-        "simple-git": "^2.17.0"
-    }
+  "name": "git-activity",
+  "description": "Make your github activities look professional",
+  "version": "1.0.0",
+  "main": "index.js",
+  "license": "MIT",
+  "dependencies": {
+    "jsonfile": "^6.0.1",
+    "moment": "^2.27.0",
+    "simple-git": "^2.17.0"
+  },
+  "devDependencies": {},
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/yonas-g/git-activity.git"
+  },
+  "keywords": [
+    "git",
+    "\"git",
+    "activity\"",
+    "git-activity"
+  ],
+  "author": "yonas",
+  "bugs": {
+    "url": "https://github.com/yonas-g/git-activity/issues"
+  },
+  "homepage": "https://github.com/yonas-g/git-activity#readme"
 }
