--- a/package.json
+++ b/package.json
@@ -19,9 +19,9 @@
     },
     "keywords": [
         "git",
-        "\"git",
-        "activity\"",
-        "git-activity"
+        "git activity",
+        "git-activity",
+        "git-busy"
     ],
     "author": "yonas",
     "bugs": {
